--- a/simpleCURD/src/main/resources/application.yml
+++ b/simpleCURD/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/curd
+    url: jdbc:mysql://localhost:3306/crud
     username: root
     password: 1234
 
