--- a/simpleCRUD/src/main/resources/application.yml
+++ b/simpleCRUD/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/crud
+    url: jdbc:mysql://43.201.207.115:3306/crud
     username: root
-    password: 1234
+    password: '4321'
 
   jpa:
     database: mysql
