--- a/simpleCRUD/Dockerfile
+++ b/simpleCRUD/Dockerfile
@@ -1,7 +1,9 @@
-FROM openjdk:17-jdk
+# 설치할 java 버전
+FROM openjdk:17-jdk 
 
-ARG JAR_FILE=build/libs/*jar
+# .jar file의 경로
+ARG JAR_FILE=build/libs/*.jar
 
 COPY ${JAR_FILE} app.jar
 
-ENTRYPOINT ["java", "-Dspring.profiles.active=doker","-jar","app.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=doker", "-jar", "app.jar"]
